feat: 增加房间成员会话鉴权
